[project]
name = "jira-export-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "tabulate>=0.9.0",
]
